<resources>
    <string name="app_name">FixLink</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_login">Login</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_back">Back</string>
    <string name="label_email">Email</string>
    <string name="hint_email_login">email@email.com</string>
    <string name="label_password">Password</string>
    <string name="hint_password_login">Please Enter Your Password</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="text_first_login">First Login</string>
    <string name="label_email_address">Email Address</string>
    <string name="hint_email_signup">Enter your email</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="hint_phone_number">Enter your phone number</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="hint_confirm_password_signup">Please Confirm Your New Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="label_first_name">First Name</string>
    <string name="hint_first_name">Enter first name</string>
    <string name="label_last_name">Last Name</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="label_equipment_name">Equipment Name</string>
    <string name="hint_equipment_name">Enter equipment name</string>
    <string name="button_change_password">Change Password</string>
    <string name="text_change_password_confirmation">Are you sure you want to change your password?</string>
    <string name="page_title_register_issue">Register an Issue</string>
    <string name="label_title">Title</string>
    <string name="hint_issue_title">Enter your issue title</string>
    <string name="label_description">Description</string>
    <string name="hint_description">Enter your description</string>
    <string name="label_location">Location</string>
    <string name="hint_location">Enter location</string>
    <string name="label_equipment">Equipment</string>
    <string name="label_issue_type">Issue Type</string>
    <string name="label_priority">Priority</string>
    <string name="page_title_register_maintenance">Schedule Maintenance</string>
    <string name="hint_maintenance_title">Enter maintenance title</string>
    <string name="hint_maintenance_description">Enter maintenance description</string>
    <string name="label_maintenance_type">Maintenance Type</string>
    <string name="button_schedule_maintenance">Schedule Maintenance</string>
    <string name="label_responsible_technician">Responsible Technician</string>
    <string name="label_maintenance_status">Maintenance Status</string>
    <string name="text_maintenance_title">Maintenance Title</string>
    <string name="text_creator_name">Creator Name</string>
    <string name="text_priority">Priority</string>
    <string name="text_status">Status</string>
    <string name="text_equipment">Equipment</string>
    <string name="text_location">Location</string>
    <string name="text_profile">Profile</string>
    <string name="text_phone">Phone</string>
    <string name="text_email">Email</string>
    <string name="text_name">Name</string>
    <string name="text_role">Role</string>
    <string name="nav_my_tasks">My Tasks</string>
    <string name="nav_issues">Issues</string>
    <string name="nav_maintenance">Maintenance</string>
    <string name="nav_profile">Profile</string>
    <string name="text_change_status_title">Change Status to %1$s</string>
    <string name="text_change_status_message">Are you sure you want to change the status of this task to %1$s? You won\'t be able to undo it afterwards.</string>
    <string name="text_change_maintenance_status_title">Change Maintenance Status</string>
    <string name="text_change_maintenance_status_message">Are you sure you want to change the status of this maintenance task?</string>
    <string name="status_pending">Pending</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_completed">Completed</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="text_filters">Filters</string>
    <string name="text_publication_date">Publication Date</string>
    <string name="text_state">State</string>
    <string name="button_clear">Clear</string>
    <string name="button_apply">Apply</string>
    <string name="text_total_issues">Total Issues</string>
    <string name="text_open_issues">%1$d open</string>
    <string name="text_total_users">Total Users</string>
    <string name="text_active_users">%1$d active today</string>
    <string name="text_total_locations">Total Locations</string>
    <string name="text_active_locations">%1$d with active issues</string>
    <string name="text_active_equipment">Active Equipment</string>
    <string name="text_of_total">of %1$d total</string>
    <string name="text_avg_issue_time">Average Issue Time</string>
    <string name="text_avg_maintenance_time">Average Maintenance Time</string>
    <string name="text_time_format">%1$d hours %2$d minutes</string>
    <string name="text_time_format_minutes">%1$d minutes</string>
    <string name="text_hours">%1$d hours</string>
    <string name="text_minutes">%1$d minutes</string>
    <string name="text_chart_issues_by_status">Issues by Status</string>
    <string name="text_chart_issues_by_priority">Issues by Priority</string>
    <string name="text_chart_maintenance_by_status">Maintenance by Status</string>
    <string name="text_recent_activity">Recent Activity</string>
    <string name="text_view_all_activity">View All</string>
    <string name="text_loading_dashboard">Loading dashboard data...</string>
    <string name="text_chart_legend_pending">Pending</string>
    <string name="text_chart_legend_in_progress">In Progress</string>
    <string name="text_chart_legend_completed">Completed</string>
    <string name="text_chart_legend_cancelled">Cancelled</string>
    <string name="text_chart_legend_low">Low</string>
    <string name="text_chart_legend_medium">Medium</string>
    <string name="text_chart_legend_high">High</string>
    <string name="text_report_content">Report content here...</string>
    <string name="text_assign_task_title">Assign Task to You</string>
    <string name="text_assign_task_message">Are you sure you want to be assigned to this task? You won\'t be able to undo it afterwards.</string>
    <string name="label_name">Name</string>
    <string name="text_issue_description">Issue description</string>
    <string name="label_responsible_technician_with_colon">Responsible Technician:</string>
    <string name="text_technician_name">Technician Name</string>
    <string name="text_maintenance_description">Monthly inspection of all fire extinguishers on the ground floor. The inspection includes checking pressure levels, expiry dates, physical condition, and seal integrity.</string>
    <string name="text_maintenance_location">Ground Floor – Hallways, Meeting Rooms</string>
    <string name="text_report">Report</string>
    <string name="hint_report_description">Please enter your description</string>
    <string name="button_send_report">Send Report</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="hint_equipment_description">Enter equipment description</string>
    <string name="label_status">Status</string>
    <string name="text_issue_image">Issue image</string>
    <string name="button_register_issue">Register Issue</string>
    <string name="text_country_code">+351</string>
    <string name="hint_password_signup">Enter your password</string>
    <string name="text_sign_up_title">Create Account</string>
    <string name="text_sign_up_subtitle">Please fill in the form to create your account</string>
    <string name="text_password_requirements">Password must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number and one special character</string>
    <string name="text_passwords_dont_match">Passwords don\'t match</string>
    <string name="text_invalid_email">Invalid email address</string>
    <string name="text_invalid_phone">Invalid phone number</string>
    <string name="text_invalid_name">Invalid name</string>
    <string name="text_account_created">Account created successfully</string>
    <string name="text_error_creating_account">Error creating account</string>
    <string name="text_responsible_technician">Luís Fernandes</string>
    <string name="label_date">Date:</string>
    <string name="text_maintenance_date">28/05/2025</string>
    <string name="button_start_task">Start Task</string>
    <string name="button_end_task">End Task</string>
    <string name="button_assign_technician">Assign Technician</string>
    <string name="button_assign_yourself">Assign yourself</string>
    <string name="button_view_report">View Report</string>
    <string name="text_issue_title">Issue Title</string>
    <string name="text_reporter_name">Reporter Name</string>
    <string name="text_date">Date</string>
    <string name="text_status_information">Status Information</string>
    <string name="text_ownership">Ownership:</string>
    <string name="text_all_issues">All Issues</string>
    <string name="text_my_issues">My Issues</string>
    <string name="hint_select_date">Select Date</string>
    <string name="text_state_pending">Pending</string>
    <string name="text_state_assigned">Assigned</string>
    <string name="text_state_under_repair">Under Repair</string>
    <string name="text_state_resolved">Resolved</string>
    <string name="text_equipment_status">Equipment Status:</string>
    <string name="text_status_active">Active</string>
    <string name="text_status_inactive">Inactive</string>
    <string name="text_filter_issues">Filter Issues</string>
    <string name="text_location_icon">Location Icon</string>
    <string name="text_user">User</string>
    <string name="label_user_type">User Type</string>
    <string name="button_register_user">Register User</string>
    <string name="button_register_equipment">Register Equipment</string>
    <string name="label_photo">Photo</string>
    <string name="text_maintenance_image">Maintenance image</string>
    <string name="hint_equipment">Select equipment</string>
    <string name="hint_priority">Select priority</string>
    <string name="hint_maintenance_type">Select maintenance type</string>
    <string name="text_add_new_item">Add New Item</string>
    <string name="text_priority_low">Low</string>
    <string name="text_priority_medium">Medium</string>
    <string name="text_priority_high">High</string>
    <string name="text_issues">Issues</string>
    <string name="text_maintenance">Maintenance</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="status_assigned">Assigned</string>
    <string name="text_state_ongoing">Ongoing</string>
    <string name="text_state_completed">Completed</string>
    <string name="text_task_type">Task Type</string>
    <string name="text_all_tasks">All Tasks</string>
    <string name="text_add_location">Add Location</string>
    <string name="text_add_user">Add User</string>
    <string name="text_add_equipment">Add Equipment</string>
    <string name="text_add_maintenance_type">Add Maintenance Type</string>
    <string name="text_add_issue_type">Add Issue Type</string>
</resources>