<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_add_new_item"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnAddUser"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_primary"
        android:textColor="@color/white"
        android:text="@string/text_add_user"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnAddEquipment"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_primary"
        android:textColor="@color/white"
        android:text="@string/text_add_equipment"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnAddLocation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_primary"
        android:textColor="@color/white"
        android:text="@string/text_add_location"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnAddMaintenanceType"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_primary"
        android:textColor="@color/white"
        android:text="@string/text_add_maintenance_type"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnAddIssueType"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_primary"
        android:textColor="@color/white"
        android:text="@string/text_add_issue_type"
        android:layout_marginBottom="8dp"/>

</LinearLayout> 