<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_name"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/text_edit"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:id="@+id/deleteIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/text_delete"/>
</LinearLayout> 